--- a/randomHexBG.html
+++ b/randomHexBG.html
@@ -6,13 +6,15 @@
   <body id="background">
     <div id="fontcolour">
       <p>Javascript Early Lessons.</p>
-      <p>Current colour:</p>
-      <span class="textContent" id="hexText">
-        <p>Purple...</p>
-      </span>
+      <p>
+        Current colour:
+        <span class="textContent" id="hexText">
+          purple.
+        </span>
+      </p>
     </div>
     <button href="#" class="btn" id="btn" onclick="changeColour()">
-      click me
+      Change!
     </button>
   </body>
 </hmtl>
